--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.joelwasserman.androidbletutorial.Activity.MainActivity">
+    tools:context=".Activity.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,7 +40,8 @@
         android:id="@+id/rv_stud"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_below="@id/PeripheralTextView">
+        android:layout_below="@id/PeripheralTextView"
+        android:visibility="visible">
 
     </android.support.v7.widget.RecyclerView>
 
