--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -23,7 +23,7 @@
             android:textColor="#FFFFFF"
             android:layout_gravity="center"
             android:textSize="50sp"
-            android:text="MCT Driver"/>
+            android:text="MCT Teacher"/>
     </LinearLayout>
 
 </FrameLayout>
