--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,16 +14,19 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#772299">
+   >
 
-        <TextView
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="#FFFFFF"
             android:layout_gravity="center"
             android:textSize="50sp"
-            android:text="MCT Teacher"/>
+            android:src="@drawable/logo"
+            android:visibility="visible"/>
+
+
     </LinearLayout>
 
 </FrameLayout>
