--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+
+    tools:context=".Activity.MainActivity">
+<!--    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activity.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin"-->
+    <include
+        android:id="@+id/toolbar_main"
+        layout="@layout/row_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar_main"
         android:text="Hello Bluetooth Scanners!" />
 
     <Button
@@ -19,19 +27,19 @@
         android:layout_height="50dp"
         android:text="Scan"
         android:id="@+id/StartScanButton"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="80dp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="Stop Scanning"
         android:id="@+id/StopScanButton"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="80dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="140dp"
         android:id="@+id/PeripheralTextView"
         android:scrollbars="vertical"
         android:maxLines="30" />
