--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".Activity.MainActivity">
-<!--    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"-->
+<!--   -->
     <include
         android:id="@+id/toolbar_main"
         layout="@layout/row_toolbar"
@@ -16,10 +12,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_below="@id/toolbar_main"
+        >
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar_main"
         android:text="Hello Bluetooth Scanners!" />
 
     <Button
@@ -52,6 +57,6 @@
         android:visibility="visible">
 
     </android.support.v7.widget.RecyclerView>
-
+    </RelativeLayout>
 
 </RelativeLayout>
