--- a/app/src/main/res/layout/row_toolbar.xml
+++ b/app/src/main/res/layout/row_toolbar.xml
@@ -10,29 +10,41 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/toolbar_back"
-        app:titleTextColor="@color/transparent"
         android:minHeight="?attr/actionBarSize"
         android:textAlignment="center"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:titleTextColor="@color/transparent">
 
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@color/transparent"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:fontFamily="calibary"
-        android:text="Toolbar Title"
-        android:layout_gravity="left"
-        android:id="@+id/toolbar_title"
-        android:layout_marginStart="50dp"/>
+            <ImageView
+                android:id="@+id/icon"
+                android:layout_width="20dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="0dp"
+                android:background="@color/transparent" />
+
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignRight="@id/icon"
+                android:layout_gravity="left"
+                android:layout_marginStart="10dp"
+                android:fontFamily="calibari"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:text="Toolbar Title"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
 </LinearLayout>
